--- a/earth-and-sun/index.html
+++ b/earth-and-sun/index.html
@@ -21,27 +21,48 @@
   (function () {
     'use strict';
 
-    var scene = new THREE.Scene();
-    var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-    var renderer = new THREE.WebGLRenderer();
+    var scene, renderer, camera;
+    var cube
 
-    renderer.setSize(window.innerWidth, window.innerHeight);
+    scene = new THREE.Scene();
+
+    function init() {
+      renderer = new THREE.WebGLRenderer();
+      renderer.setClearColor(0xffffff, 1.0);
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      renderer.shadowMapEnabled = true;
+
+      camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
+      camera.position.x = -20;
+      camera.position.y = 0;
+      camera.position.z = 40;
+      camera.lookAt(new THREE.Vector3(10, 0, 0));
+
+      fillScene();
+    }
 
 
-    var geometry = new THREE.BoxGeometry(1, 1, 1);
-    var material = new THREE.MeshBasicMaterial({color: 0x00ff00});
-    var cube = new THREE.Mesh(geometry, material);
+    function fillScene() {
+      scene = new THREE.Scene();
 
-    scene.add(cube);
-    camera.position.z = 5;
+      var geometry = new THREE.BoxGeometry(5, 5, 5);
+      var material = new THREE.MeshBasicMaterial({color: 0x00ff00});
+      cube = new THREE.Mesh(geometry, material);
 
-    var render = function () {
-      requestAnimationFrame(render);
+      scene.add(cube);
+    }
+
+    function animate() {
+      window.requestAnimationFrame(animate);
+      render();
+    }
+
+    function render() {
       cube.rotation.x += 0.01;
       cube.rotation.y += 0.01;
       renderer.render(scene, camera);
-    };
-    render();
+    }
+
 
     function addToDOM() {
       var container = document.getElementById('container');
@@ -53,7 +74,14 @@
       container.appendChild(renderer.domElement);
     }
 
-    addToDOM();
+    try {
+      init();
+      addToDOM();
+      animate();
+    } catch (e) {
+      var errorReport = "Your program encountered an unrecoverable error, can not draw on canvas. Error was:<br/><br/>";
+      $('#container').append(errorReport + e);
+    }
   })();
 </script>
 </body>
