Add function onWindowResize

--- a/lerping/index.html
+++ b/lerping/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Particles</title>
+    <title>Lerping</title>
     <style>
         body {
             margin: 0;
@@ -22,6 +22,8 @@
     'use strict';
 
     var scene, renderer, camera;
+    var windowHalfX = window.innerWidth / 2;
+    var windowHalfY = window.innerHeight / 2;
 
     scene = new THREE.Scene();
 
@@ -38,6 +40,8 @@
       camera.lookAt(new THREE.Vector3(10, 0, 0));
 
       fillScene();
+
+      window.addEventListener( 'resize', onWindowResize, false );
     }
 
 
@@ -63,6 +67,15 @@
       var cloud = new THREE.Points(geometry, material);
 
       scene.add( cloud );
+    }
+
+
+    function onWindowResize() {
+      windowHalfX = window.innerWidth / 2;
+      windowHalfY = window.innerHeight / 2;
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize( window.innerWidth, window.innerHeight );
     }
 
 
