--- a/lerping/index.html
+++ b/lerping/index.html
@@ -14,87 +14,168 @@
 </head>
 <body>
 <script src="../libs/three.js"></script>
+<script src="../libs/orbitControls.js"></script>
 <div id="container">
     <canvas id="canvas"></canvas>
 </div>
 <script>
-  (function () {
-    'use strict';
 
-    var scene, renderer, camera;
+  'use strict';
 
+  var camera, scene, renderer, cameraControls;
+  var clock = new THREE.Clock();
+  var mesh, material;
+
+  var cubeCount,
+    meshes = [],
+    materials = [],
+    xgrid = 20,
+    ygrid = 10;
+
+  var windowHalfX = window.innerWidth / 2;
+  var windowHalfY = window.innerHeight / 2;
+
+
+  scene = new THREE.Scene();
+
+  function init() {
+    renderer = new THREE.WebGLRenderer();
+    renderer.setClearColor(0x000000, 1.0);
+    renderer.setPixelRatio( window.devicePixelRatio );
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.shadowMap.enabled = true;
+
+    camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
+    camera.position.x = -10;
+    camera.position.y = 0;
+    camera.position.z = 500;
+
+    cameraControls = new THREE.OrbitControls(camera, renderer.domElement);
+    cameraControls.addEventListener('change', render); // remove when using animation loop
+    cameraControls.enableZoom = false;
+
+    fillScene();
+
+    window.addEventListener( 'resize', onWindowResize, false );
+  }
+
+
+  function fillScene() {
     scene = new THREE.Scene();
 
-    function init() {
-      renderer = new THREE.WebGLRenderer();
-      renderer.setClearColor(0x000000, 1.0);
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      renderer.shadowMapEnabled = true;
+    createParticles();
+  }
 
-      camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-      camera.position.x = 0;
-      camera.position.y = 0;
-      camera.position.z = 150;
-      camera.lookAt(new THREE.Vector3(10, 0, 0));
+  function createParticles() {
+    var i, j, ux, uy, ox, oy,
+      geometry,
+      xsize, ysize;
 
-      fillScene();
-    }
+    ux = 1 / xgrid;
+    uy = 1 / ygrid;
 
+    xsize = 240 / xgrid;
+    ysize = 120 / ygrid;
 
-    function fillScene() {
-      scene = new THREE.Scene();
+    var parameters = {color: 0xffffff, map: THREE.ImageUtils.loadTexture('../assets/img/sun.jpeg')};
+    cubeCount = 0;
 
-      createParticles();
+    for (i = 0; i < xgrid; i++) {
+      for (j = 0; j < ygrid; j++) {
 
-    }
+        ox = i;
+        oy = j;
+        geometry = new THREE.PlaneGeometry(xsize, ysize);
+        changeUVs(geometry, ux, uy, ox, oy);
 
-    function createParticles() {
-      var geometry = new THREE.Geometry();
-      var material = new THREE.PointsMaterial({size: 15, vertexColors: true, color: 0xffffff});
+        materials[cubeCount] = new THREE.MeshBasicMaterial(parameters);
+        materials[cubeCount].side = THREE.DoubleSide;
 
-      for (var x = 0; x < 5; x++) {
-        for (var y = 0; y < 5; y++) {
-          var particle = new THREE.Vector3(x * 10, y * 10, 0);
-          geometry.vertices.push(particle);
-          geometry.colors.push(new THREE.Color(Math.random() * 0xffffff));
-        }
+        material = materials[cubeCount];
+
+        mesh = new THREE.Mesh(geometry, material);
+
+        mesh.position.x = ( i - xgrid / 2 ) * xsize;
+        mesh.position.y = ( j - ygrid / 2 ) * ysize;
+        mesh.position.z = 0;
+        mesh.scale.x = mesh.scale.y = mesh.scale.z = 1;
+        scene.add(mesh);
+
+        mesh.dx = 0.001 * ( 0.5 - Math.random() );
+        mesh.dy = 0.001 * ( 0.5 - Math.random() );
+
+        meshes[cubeCount] = mesh;
+        cubeCount += 1;
       }
-
-      var cloud = new THREE.Points(geometry, material);
-
-      scene.add( cloud );
     }
+  }
 
 
-    function animate() {
-      window.requestAnimationFrame(animate);
-      render();
-    }
+  function changeUVs(geometry, unitx, unity, offsetx, offsety) {
+    var faceVertexUvs = geometry.faceVertexUvs[0];
 
-    function render() {
-      renderer.render(scene, camera);
-    }
+    for (var i = 0; i < faceVertexUvs.length; i++) {
+      var uvs = faceVertexUvs[i];
 
+      for (var j = 0; j < uvs.length; j++) {
+        var uv = uvs[j];
 
-    function addToDOM() {
-      var container = document.getElementById('container');
-      var canvas = container.getElementsByTagName('canvas');
-
-      if (canvas.length > 0) {
-        container.removeChild(canvas[0]);
+        uv.x = ( uv.x + offsetx ) * unitx;
+        uv.y = ( uv.y + offsety ) * unity;
       }
-      container.appendChild(renderer.domElement);
+    }
+  }
+
+
+  function onWindowResize() {
+    windowHalfX = window.innerWidth / 2;
+    windowHalfY = window.innerHeight / 2;
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize( window.innerWidth, window.innerHeight );
+  }
+
+
+  function animate() {
+    var delta = clock.getDelta();
+    cameraControls.update(delta);
+
+
+    window.requestAnimationFrame(animate);
+    render();
+  }
+
+
+  function render() {
+    for (var i = 0; i < cubeCount; i++) {
+      mesh = meshes[i];
+
+      mesh.rotation.x += 0.005;
+      mesh.rotation.y += 0.005;
     }
 
-    try {
-      init();
-      addToDOM();
-      animate();
-    } catch (e) {
-      var errorReport = "Your program encountered an unrecoverable error, can not draw on canvas. Error was:<br/><br/>";
-      $('#container').append(errorReport + e);
+    renderer.render(scene, camera);
+  }
+
+
+  function addToDOM() {
+    var container = document.getElementById('container');
+    var canvas = container.getElementsByTagName('canvas');
+
+    if (canvas.length > 0) {
+      container.removeChild(canvas[0]);
     }
-  })();
+    container.appendChild(renderer.domElement);
+  }
+
+  try {
+    init();
+    addToDOM();
+    animate();
+  } catch (e) {
+    var errorReport = "Your program encountered an unrecoverable error, can not draw on canvas. Error was:<br/><br/>";
+    $('#container').append(errorReport + e);
+  }
 </script>
 </body>
 </html>
