--- a/lerping/index.html
+++ b/lerping/index.html
@@ -26,7 +26,7 @@
   var clock = new THREE.Clock();
   var mesh, material;
 
-  var cubeCount,
+  var cubesCount,
     meshes = [],
     materials = [],
     xgrid = 20,
@@ -39,12 +39,13 @@
   var mouse = new THREE.Vector2();
   var intersected;
 
+
   scene = new THREE.Scene();
 
   function init() {
     renderer = new THREE.WebGLRenderer();
     renderer.setClearColor(0x000000, 1.0);
-    renderer.setPixelRatio( window.devicePixelRatio );
+    renderer.setPixelRatio(window.devicePixelRatio);
     renderer.setSize(window.innerWidth, window.innerHeight);
     renderer.shadowMap.enabled = true;
 
@@ -59,8 +60,7 @@
 
     fillScene();
 
-    window.addEventListener( 'resize', onWindowResize, false );
-
+    window.addEventListener('resize', onWindowResize, false);
     renderer.domElement.addEventListener('mousemove', onDocumentMouseMove, false);
   }
 
@@ -70,6 +70,7 @@
 
     createCubes();
   }
+
 
   function createCubes() {
     var i, j, ux, uy, ox, oy,
@@ -83,7 +84,7 @@
     ysize = 120 / ygrid;
 
     var parameters = {color: 0xffffff};
-    cubeCount = 0;
+    cubesCount = 0;
 
     for (i = 0; i < xgrid; i += 2) {
       for (j = 0; j < ygrid; j += 2) {
@@ -93,10 +94,10 @@
         geometry = new THREE.CubeGeometry(xsize, ysize, xsize);
         changeUVs(geometry, ux, uy, ox, oy);
 
-        materials[cubeCount] = new THREE.MeshBasicMaterial(parameters);
-        materials[cubeCount].side = THREE.DoubleSide;
+        materials[cubesCount] = new THREE.MeshBasicMaterial(parameters);
+        materials[cubesCount].side = THREE.DoubleSide;
 
-        material = materials[cubeCount];
+        material = materials[cubesCount];
 
         mesh = new THREE.Mesh(geometry, material);
 
@@ -108,9 +109,15 @@
 
         mesh.dx = 0.001 * ( 0.5 - Math.random() );
         mesh.dy = 0.001 * ( 0.5 - Math.random() );
+        mesh.newPosition = new THREE.Vector3(
+          Math.random() * 200 - 100, Math.random() * 200 - 100, Math.random() * 200 - 100
+        );
 
-        meshes[cubeCount] = mesh;
-        cubeCount += 1;
+        mesh.endTransition = true;
+        mesh.newPosition.floor();
+        mesh.position.floor();
+        meshes[cubesCount] = mesh;
+        cubesCount += 1;
       }
     }
   }
@@ -137,7 +144,7 @@
     windowHalfY = window.innerHeight / 2;
     camera.aspect = window.innerWidth / window.innerHeight;
     camera.updateProjectionMatrix();
-    renderer.setSize( window.innerWidth, window.innerHeight );
+    renderer.setSize(window.innerWidth, window.innerHeight);
   }
 
 
@@ -151,14 +158,43 @@
   }
 
 
+  var timer, alpha, currentX, currentY, currentZ, delta;
+
+  timer = 0;
+  alpha = 0;
+
   function render() {
-    for (var i = 0; i < cubeCount; i++) {
+    delta = clock.getDelta();
+    for (var i = 0; i < cubesCount; i++) {
       mesh = meshes[i];
 
-      mesh.rotation.x += 0.005;
-      mesh.rotation.y += 0.005;
+      mesh.rotation.x += mesh.dx;
+      mesh.rotation.y += mesh.dy;
+
+      if (timer % 500 === 0 && timer !== 0) {
+        alpha = 0;
+        mesh.endTransition = false;
+      }
+
+      if (!mesh.endTransition) {
+        currentX = Math.abs(mesh.newPosition.x - mesh.position.x);
+        currentY = Math.abs(mesh.newPosition.y - mesh.position.y);
+        currentZ = Math.abs(mesh.newPosition.z - mesh.position.z);
+
+        if (currentX >= 1 || currentY >= 1 || currentZ >= 1) {
+          alpha += delta / 20;
+          mesh.position.lerp(mesh.newPosition, alpha);
+        } else {
+          mesh.endTransition = true;
+
+          mesh.newPosition = new THREE.Vector3(
+            Math.random() * 200 - 100, Math.random() * 200 - 100, Math.random() * 200 - 100
+          );
+        }
+      }
     }
 
+    timer++;
     renderer.render(scene, camera);
   }
 
@@ -167,6 +203,7 @@
     event.preventDefault();
     mouse.x = ( event.clientX / window.innerWidth ) * 2 - 1;
     mouse.y = -( event.clientY / window.innerHeight ) * 2 + 1;
+
 
     raycaster.setFromCamera(mouse, camera);
     var intersections;
@@ -186,37 +223,8 @@
       intersected = null;
       document.body.style.cursor = 'auto';
     }
-  }
 
-
-  function onWindowResize() {
-    windowHalfX = window.innerWidth / 2;
-    windowHalfY = window.innerHeight / 2;
-    camera.aspect = window.innerWidth / window.innerHeight;
-    camera.updateProjectionMatrix();
-    renderer.setSize( window.innerWidth, window.innerHeight );
-  }
-
-
-  function animate() {
-    var delta = clock.getDelta();
-    cameraControls.update(delta);
-
-
-    window.requestAnimationFrame(animate);
-    render();
-  }
-
-
-  function render() {
-    for (var i = 0; i < cubeCount; i++) {
-      mesh = meshes[i];
-
-      mesh.rotation.x += 0.005;
-      mesh.rotation.y += 0.005;
-    }
-
-    renderer.render(scene, camera);
+    // update tracker
   }
 
 
