--- a/lerping/index.html
+++ b/lerping/index.html
@@ -29,8 +29,8 @@
   var cubesCount,
     meshes = [],
     materials = [],
-    xgrid = 20,
-    ygrid = 10;
+    xgrid = 18,
+    ygrid = 6;
 
   var windowHalfX = window.innerWidth / 2;
   var windowHalfY = window.innerHeight / 2;
@@ -71,7 +71,6 @@
     createCubes();
   }
 
-
   function createCubes() {
     var i, j, ux, uy, ox, oy,
       geometry,
@@ -83,7 +82,7 @@
     xsize = 240 / xgrid;
     ysize = 120 / ygrid;
 
-    var parameters = {color: 0xffffff};
+    var parameters = {color: 0xffffff, transparent: true, opacity: 0.8};
     cubesCount = 0;
 
     for (i = 0; i < xgrid; i += 2) {
@@ -107,8 +106,8 @@
         mesh.scale.x = mesh.scale.y = mesh.scale.z = 1;
         scene.add(mesh);
 
-        mesh.dx = 0.001 * ( 0.5 - Math.random() );
-        mesh.dy = 0.001 * ( 0.5 - Math.random() );
+        mesh.dx = 0.01 * (0.5 - Math.random());
+        mesh.dy = 0.01 * (0.5 - Math.random());
         mesh.newPosition = new THREE.Vector3(
           Math.random() * 200 - 100, Math.random() * 200 - 100, Math.random() * 200 - 100
         );
@@ -123,7 +122,7 @@
   }
 
 
-  function changeUVs(geometry, unitx, unity, offsetx, offsety) {
+  function changeUVs(geometry, unitX, unitY, offsetX, offsetY) {
     var faceVertexUvs = geometry.faceVertexUvs[0];
 
     for (var i = 0; i < faceVertexUvs.length; i++) {
@@ -132,8 +131,8 @@
       for (var j = 0; j < uvs.length; j++) {
         var uv = uvs[j];
 
-        uv.x = ( uv.x + offsetx ) * unitx;
-        uv.y = ( uv.y + offsety ) * unity;
+        uv.x = ( uv.x + offsetX ) * unitX;
+        uv.y = ( uv.y + offsetY ) * unitY;
       }
     }
   }
@@ -142,8 +141,10 @@
   function onWindowResize() {
     windowHalfX = window.innerWidth / 2;
     windowHalfY = window.innerHeight / 2;
+
     camera.aspect = window.innerWidth / window.innerHeight;
     camera.updateProjectionMatrix();
+
     renderer.setSize(window.innerWidth, window.innerHeight);
   }
 
@@ -152,16 +153,31 @@
     var delta = clock.getDelta();
     cameraControls.update(delta);
 
-
     window.requestAnimationFrame(animate);
     render();
   }
 
 
-  var timer, alpha, currentX, currentY, currentZ, delta;
+  var timer = 0;
+  var alphaTime = 0;
+  var currentX, currentY, currentZ;
+  var delta;
 
-  timer = 0;
-  alpha = 0;
+
+  var positions;
+  positions = [];
+
+  var stepSize = 0.5;
+  for ( var alpha = 0; alpha <= 1.0; alpha += stepSize ) {
+    for ( var beta = 0; beta <= 1.0; beta += stepSize ) {
+      for ( var gamma = 0; gamma <= 1.0; gamma += stepSize ) {
+        positions.push(new THREE.Vector3(
+          alpha * 60 - 50, beta * 60 - 50,gamma * 60 - 50
+        ));
+      }
+    }
+  }
+
 
   function render() {
     delta = clock.getDelta();
@@ -172,7 +188,7 @@
       mesh.rotation.y += mesh.dy;
 
       if (timer % 500 === 0 && timer !== 0) {
-        alpha = 0;
+        alphaTime = 0;
         mesh.endTransition = false;
       }
 
@@ -182,14 +198,12 @@
         currentZ = Math.abs(mesh.newPosition.z - mesh.position.z);
 
         if (currentX >= 1 || currentY >= 1 || currentZ >= 1) {
-          alpha += delta / 20;
-          mesh.position.lerp(mesh.newPosition, alpha);
+          alphaTime += delta / 20;
+          mesh.position.lerp(mesh.newPosition, alphaTime);
         } else {
           mesh.endTransition = true;
 
-          mesh.newPosition = new THREE.Vector3(
-            Math.random() * 200 - 100, Math.random() * 200 - 100, Math.random() * 200 - 100
-          );
+          mesh.newPosition = positions[i];
         }
       }
     }
