--- a/lerping/index.html
+++ b/lerping/index.html
@@ -32,6 +32,9 @@
     xgrid = 18,
     ygrid = 6;
 
+  var nextShape;
+  var shapes = {random: [], cube: []};
+
   var windowHalfX = window.innerWidth / 2;
   var windowHalfY = window.innerHeight / 2;
 
@@ -69,7 +72,15 @@
     scene = new THREE.Scene();
 
     createCubes();
+
+    initShapesPositions();
+    nextShape = 'cube';
+
+    setNewShapePosition();
+
+    endMeshesTransition = true;
   }
+
 
   function createCubes() {
     var i, j, ux, uy, ox, oy,
@@ -82,7 +93,7 @@
     xsize = 240 / xgrid;
     ysize = 120 / ygrid;
 
-    var parameters = {color: 0xffffff, transparent: true, opacity: 0.8};
+    var parameters = {color: 0xffffff};
     cubesCount = 0;
 
     for (i = 0; i < xgrid; i += 2) {
@@ -106,14 +117,9 @@
         mesh.scale.x = mesh.scale.y = mesh.scale.z = 1;
         scene.add(mesh);
 
-        mesh.dx = 0.01 * (0.5 - Math.random());
-        mesh.dy = 0.01 * (0.5 - Math.random());
-        mesh.newPosition = new THREE.Vector3(
-          Math.random() * 200 - 100, Math.random() * 200 - 100, Math.random() * 200 - 100
-        );
+        mesh.dx = 0.001 * ( 0.5 - Math.random() );
+        mesh.dy = 0.001 * ( 0.5 - Math.random() );
 
-        mesh.endTransition = true;
-        mesh.newPosition.floor();
         mesh.position.floor();
         meshes[cubesCount] = mesh;
         cubesCount += 1;
@@ -138,13 +144,67 @@
   }
 
 
+  function initShapesPositions() {
+    var position;
+    var i;
+
+    //random
+    for (i = 0; i < cubesCount; i++) {
+      position = new THREE.Vector3(
+        Math.random() * 200 - 100, Math.random() * 200 - 100, Math.random() * 200 - 100
+      );
+      position.floor();
+
+      shapes.random.push(position);
+    }
+
+    //cube
+    var stepSize = 0.5;
+
+    for (var x = 0; x <= 1.0; x += stepSize) {
+      for (var y = 0; y <= 1.0; y += stepSize) {
+        for (var z = 0; z <= 1.0; z += stepSize) {
+          position = new THREE.Vector3(x * 60 - 50, y * 60 - 50, z * 60 - 50);
+          position.floor();
+
+          shapes.cube.push(position);
+        }
+      }
+    }
+  }
+
+
+  function setNewShapePosition() {
+    var positions = [];
+
+    switch (nextShape) {
+      case 'random':
+        positions = shapes.random;
+        nextShape = 'cube';
+        break;
+
+      case 'cube':
+        positions = shapes.cube;
+        nextShape = 'random';
+        break;
+
+      default:
+        positions = shapes.random;
+        nextShape = 'cube';
+        break;
+    }
+
+    for (var i = 0; i < cubesCount; i++) {
+      meshes[i].newPosition = positions[i];
+    }
+  }
+
+
   function onWindowResize() {
     windowHalfX = window.innerWidth / 2;
     windowHalfY = window.innerHeight / 2;
-
     camera.aspect = window.innerWidth / window.innerHeight;
     camera.updateProjectionMatrix();
-
     renderer.setSize(window.innerWidth, window.innerHeight);
   }
 
@@ -158,53 +218,39 @@
   }
 
 
-  var timer = 0;
-  var alphaTime = 0;
-  var currentX, currentY, currentZ;
-  var delta;
+  var timer, alpha, currentX, currentY, currentZ, delta, endMeshesTransition;
 
-
-  var positions;
-  positions = [];
-
-  var stepSize = 0.5;
-  for ( var alpha = 0; alpha <= 1.0; alpha += stepSize ) {
-    for ( var beta = 0; beta <= 1.0; beta += stepSize ) {
-      for ( var gamma = 0; gamma <= 1.0; gamma += stepSize ) {
-        positions.push(new THREE.Vector3(
-          alpha * 60 - 50, beta * 60 - 50,gamma * 60 - 50
-        ));
-      }
-    }
-  }
-
+  timer = 0;
+  alpha = 0;
 
   function render() {
     delta = clock.getDelta();
-    for (var i = 0; i < cubesCount; i++) {
-      mesh = meshes[i];
 
-      mesh.rotation.x += mesh.dx;
-      mesh.rotation.y += mesh.dy;
+    if (timer % 500 === 0 && timer !== 0) {
+      alpha = 0;
+      endMeshesTransition = false;
+    }
 
-      if (timer % 500 === 0 && timer !== 0) {
-        alphaTime = 0;
-        mesh.endTransition = false;
-      }
+    if (!endMeshesTransition) {
+      endMeshesTransition = true;
 
-      if (!mesh.endTransition) {
+      for (var i = 0; i < cubesCount; i++) {
+        mesh = meshes[i];
+
         currentX = Math.abs(mesh.newPosition.x - mesh.position.x);
         currentY = Math.abs(mesh.newPosition.y - mesh.position.y);
         currentZ = Math.abs(mesh.newPosition.z - mesh.position.z);
 
         if (currentX >= 1 || currentY >= 1 || currentZ >= 1) {
-          alphaTime += delta / 20;
-          mesh.position.lerp(mesh.newPosition, alphaTime);
-        } else {
-          mesh.endTransition = true;
+          alpha += delta / 20;
+          mesh.position.lerp(mesh.newPosition, alpha);
 
-          mesh.newPosition = positions[i];
+          endMeshesTransition = false;
         }
+      }
+
+      if (endMeshesTransition) {
+        setNewShapePosition();
       }
     }
 
@@ -237,8 +283,6 @@
       intersected = null;
       document.body.style.cursor = 'auto';
     }
-
-    // update tracker
   }
 
 
